--- a/Weather_analysis.ipynb
+++ b/Weather_analysis.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\ALVIN KAYI\\Desktop\\python_data_analysis\\Weather_analysis\\file.csv\")"
+    "df = pd.read_csv(r\"\file.csv\")"
    ]
   },
   {
